--- a/notebooks/01_leitura_validacao_dados.ipynb
+++ b/notebooks/01_leitura_validacao_dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0d859445",
    "metadata": {},
    "outputs": [
@@ -34,6 +34,12 @@
       " |-- Longitude: double (nullable = true)\n",
       " |-- Location: string (nullable = true)\n",
       "\n",
+      "+---+-----------+----+-----+----+------------+-----------+--------------------+------+--------+----+--------+------+--------------+--------+------------+------------+----+----------+--------+---------+--------+\n",
+      "| ID|Case Number|Date|Block|IUCR|Primary Type|Description|Location Description|Arrest|Domestic|Beat|District|  Ward|Community Area|FBI Code|X Coordinate|Y Coordinate|Year|Updated On|Latitude|Longitude|Location|\n",
+      "+---+-----------+----+-----+----+------------+-----------+--------------------+------+--------+----+--------+------+--------------+--------+------------+------------+----+----------+--------+---------+--------+\n",
+      "|  0|          0|   0|    0|   0|           0|          0|               13257|     0|       0|   0|      47|614831|        613455|       0|       89642|       89642|   0|         0|   89642|    89642|   89642|\n",
+      "+---+-----------+----+-----+----+------------+-----------+--------------------+------+--------+----+--------+------+--------------+--------+------------+------------+----+----------+--------+---------+--------+\n",
+      "\n",
       "+--------+-----------+--------------------+--------------------+----+------------------+--------------------+--------------------+------+--------+----+--------+----+--------------+--------+------------+------------+----+--------------------+--------+---------+--------+\n",
       "|      ID|Case Number|                Date|               Block|IUCR|      Primary Type|         Description|Location Description|Arrest|Domestic|Beat|District|Ward|Community Area|FBI Code|X Coordinate|Y Coordinate|Year|          Updated On|Latitude|Longitude|Location|\n",
       "+--------+-----------+--------------------+--------------------+----+------------------+--------------------+--------------------+------+--------+----+--------+----+--------------+--------+------------+------------+----+--------------------+--------+---------+--------+\n",
@@ -50,6 +56,7 @@
    ],
    "source": [
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col, when, isnan, count\n",
     "\n",
     "spark = SparkSession.builder \\\n",
     "    .appName(\"ChicagoCrimeProject\") \\\n",
@@ -60,6 +67,25 @@
     "\n",
     "# Mostra o esquema e primeiras linhas\n",
     "df.printSchema()\n",
+    "\n",
+    "# Obtém os tipos de cada coluna\n",
+    "dtypes = dict(df.dtypes)\n",
+    "\n",
+    "# Lista para guardar expressões\n",
+    "expr_list = []\n",
+    "\n",
+    "for c in df.columns:\n",
+    "    # Para tipos numéricos (double/float), verifica tanto NULL quanto NaN\n",
+    "    if dtypes[c] in ('double', 'float'):\n",
+    "        expr_list.append(count(when(col(c).isNull() | isnan(c), c)).alias(c))\n",
+    "    # Para os outros tipos, verifica apenas NULL\n",
+    "    else:\n",
+    "        expr_list.append(count(when(col(c).isNull(), c)).alias(c))\n",
+    "\n",
+    "# Executa a consulta para contar valores nulos\n",
+    "null_counts = df.select(expr_list)\n",
+    "null_counts.show()\n",
+    "\n",
     "df.show(5)\n",
     "\n",
     "# Amostra de 30%\n",
