--- a/notebooks/01_data_read_validation.ipynb
+++ b/notebooks/01_data_read_validation.ipynb
@@ -92,7 +92,7 @@
     "df_small = df.sample(fraction=0.1, seed=42)\n",
     "\n",
     "# Guarda em Parquet\n",
-    "df.limit(1000).write.mode(\"overwrite\").parquet(\"../dados/teste.parquet\")\n",
+    "df.coalesce(4).write.mode(\"overwrite\").parquet(\"../dados/chicago_crime.parquet\")\n",
     "\n",
     "df_small.write.mode(\"overwrite\").parquet(\"../dados/chicago_crime_small.parquet\")\n"
    ]
