--- a/notebooks/01_data_read_validation.ipynb
+++ b/notebooks/01_data_read_validation.ipynb
@@ -1,9 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "48f80632",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Ler o ficheiro de dados Chicago Crime - em csv usando o spark.read.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0d859445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import functions as F, types as T\n",
+    "from pathlib import Path\n",
+    "\n",
+    "data_dir = '../dados/'\n",
+    "file_chicago_crime_csv = data_dir + 'chicago_crime.csv'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dcbbad1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Apresentar o schema do csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f70d8da6",
    "metadata": {},
    "outputs": [
     {
@@ -12,89 +45,164 @@
      "text": [
       "root\n",
       " |-- ID: integer (nullable = true)\n",
-      " |-- Case Number: string (nullable = true)\n",
+      " |-- Case_Number: string (nullable = true)\n",
       " |-- Date: string (nullable = true)\n",
       " |-- Block: string (nullable = true)\n",
       " |-- IUCR: string (nullable = true)\n",
-      " |-- Primary Type: string (nullable = true)\n",
+      " |-- Primary_Type: string (nullable = true)\n",
       " |-- Description: string (nullable = true)\n",
-      " |-- Location Description: string (nullable = true)\n",
+      " |-- Location_Description: string (nullable = true)\n",
       " |-- Arrest: boolean (nullable = true)\n",
       " |-- Domestic: boolean (nullable = true)\n",
       " |-- Beat: integer (nullable = true)\n",
       " |-- District: integer (nullable = true)\n",
       " |-- Ward: integer (nullable = true)\n",
-      " |-- Community Area: integer (nullable = true)\n",
-      " |-- FBI Code: string (nullable = true)\n",
-      " |-- X Coordinate: integer (nullable = true)\n",
-      " |-- Y Coordinate: integer (nullable = true)\n",
+      " |-- Community_Area: integer (nullable = true)\n",
+      " |-- FBI_Code: string (nullable = true)\n",
+      " |-- X_Coordinate: integer (nullable = true)\n",
+      " |-- Y_Coordinate: integer (nullable = true)\n",
       " |-- Year: integer (nullable = true)\n",
-      " |-- Updated On: string (nullable = true)\n",
+      " |-- Updated_On: string (nullable = true)\n",
       " |-- Latitude: double (nullable = true)\n",
       " |-- Longitude: double (nullable = true)\n",
       " |-- Location: string (nullable = true)\n",
-      "\n",
-      "+---+-----------+----+-----+----+------------+-----------+--------------------+------+--------+----+--------+------+--------------+--------+------------+------------+----+----------+--------+---------+--------+\n",
-      "| ID|Case Number|Date|Block|IUCR|Primary Type|Description|Location Description|Arrest|Domestic|Beat|District|  Ward|Community Area|FBI Code|X Coordinate|Y Coordinate|Year|Updated On|Latitude|Longitude|Location|\n",
-      "+---+-----------+----+-----+----+------------+-----------+--------------------+------+--------+----+--------+------+--------------+--------+------------+------------+----+----------+--------+---------+--------+\n",
-      "|  0|          0|   0|    0|   0|           0|          0|               13257|     0|       0|   0|      47|614831|        613455|       0|       89642|       89642|   0|         0|   89642|    89642|   89642|\n",
-      "+---+-----------+----+-----+----+------------+-----------+--------------------+------+--------+----+--------+------+--------------+--------+------------+------------+----+----------+--------+---------+--------+\n",
-      "\n",
-      "+--------+-----------+--------------------+--------------------+----+------------------+--------------------+--------------------+------+--------+----+--------+----+--------------+--------+------------+------------+----+--------------------+--------+---------+--------+\n",
-      "|      ID|Case Number|                Date|               Block|IUCR|      Primary Type|         Description|Location Description|Arrest|Domestic|Beat|District|Ward|Community Area|FBI Code|X Coordinate|Y Coordinate|Year|          Updated On|Latitude|Longitude|Location|\n",
-      "+--------+-----------+--------------------+--------------------+----+------------------+--------------------+--------------------+------+--------+----+--------+----+--------------+--------+------------+------------+----+--------------------+--------+---------+--------+\n",
-      "|11037294|   JA371270|03/18/2015 12:00:...|   0000X W WACKER DR|1153|DECEPTIVE PRACTICE|FINANCIAL IDENTIT...|                BANK| false|   false| 111|       1|  42|            32|      11|        NULL|        NULL|2015|08/01/2017 03:52:...|    NULL|     NULL|    NULL|\n",
-      "|11646293|   JC213749|12/20/2018 03:00:...|023XX N LOCKWOOD AVE|1154|DECEPTIVE PRACTICE|FINANCIAL IDENTIT...|           APARTMENT| false|   false|2515|      25|  36|            19|      11|        NULL|        NULL|2018|04/06/2019 04:04:...|    NULL|     NULL|    NULL|\n",
-      "|11645836|   JC212333|05/01/2016 12:25:...| 055XX S ROCKWELL ST|1153|DECEPTIVE PRACTICE|FINANCIAL IDENTIT...|                NULL| false|   false| 824|       8|  15|            63|      11|        NULL|        NULL|2016|04/06/2019 04:04:...|    NULL|     NULL|    NULL|\n",
-      "|11645959|   JC211511|12/20/2018 04:00:...|  045XX N ALBANY AVE|2820|     OTHER OFFENSE|    TELEPHONE THREAT|           RESIDENCE| false|   false|1724|      17|  33|            14|     08A|        NULL|        NULL|2018|04/06/2019 04:04:...|    NULL|     NULL|    NULL|\n",
-      "|11645601|   JC212935|06/01/2014 12:01:...| 087XX S SANGAMON ST|1153|DECEPTIVE PRACTICE|FINANCIAL IDENTIT...|           RESIDENCE| false|   false|2222|      22|  21|            71|      11|        NULL|        NULL|2014|04/06/2019 04:04:...|    NULL|     NULL|    NULL|\n",
-      "+--------+-----------+--------------------+--------------------+----+------------------+--------------------+--------------------+------+--------+----+--------+----+--------------+--------+------------+------------+----+--------------------+--------+---------+--------+\n",
-      "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col, when, isnan, count\n",
-    "\n",
     "spark = SparkSession.builder \\\n",
     "    .appName(\"ChicagoCrimeProject\") \\\n",
+    "    .config(\"spark.driver.memory\", \"8g\")\\\n",
+    "    .config(\"spark.executor.memory\", \"8g\")\\\n",
     "    .getOrCreate()\n",
     "\n",
     "# Lê o CSV\n",
-    "df = spark.read.csv(\"../dados/chicago_crime.csv\", header=True, inferSchema=True)\n",
+    "df = spark.read.csv(file_chicago_crime_csv, header=True, inferSchema=True)\n",
+    "\n",
+    "# Renomear colunas\n",
+    "for col in df.columns:\n",
+    "    novo_nome = col.strip().replace(\" \", \"_\")\n",
+    "    df = df.withColumnRenamed(col, novo_nome)\n",
     "\n",
     "# Mostra o esquema e primeiras linhas\n",
-    "df.printSchema()\n",
+    "df.printSchema()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "502b1e65",
+   "metadata": {},
+   "source": [
+    "### Profile Report usando ydata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46f0e73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "414972d45a014af4b95b1de9dc0c53bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ydata_profiling import ProfileReport\n",
     "\n",
-    "# Obtém os tipos de cada coluna\n",
-    "dtypes = dict(df.dtypes)\n",
+    "profile_title = 'chicago_crime'\n",
     "\n",
-    "# Lista para guardar expressões\n",
-    "expr_list = []\n",
+    "# aqui fazemos um sample mais pequeno pois não é possível com todo o dataset\n",
+    "sample_df = df.sample(0.1)\n",
     "\n",
-    "for c in df.columns:\n",
-    "    # Para tipos numéricos (double/float), verifica tanto NULL quanto NaN\n",
-    "    if dtypes[c] in ('double', 'float'):\n",
-    "        expr_list.append(count(when(col(c).isNull() | isnan(c), c)).alias(c))\n",
-    "    # Para os outros tipos, verifica apenas NULL\n",
-    "    else:\n",
-    "        expr_list.append(count(when(col(c).isNull(), c)).alias(c))\n",
+    "profile_report = ProfileReport(\n",
+    "    sample_df,\n",
+    "    title=profile_title,\n",
+    "    infer_dtypes=False,\n",
+    "    interactions=None,\n",
+    "    missing_diagrams=None,\n",
+    "    correlations={\n",
+    "        \"auto\": {\"calculate\": False},\n",
+    "        \"pearson\": {\"calculate\": False},\n",
+    "        \"spearman\": {\"calculate\": False},\n",
+    "    },\n",
+    "    html={\"inline\": False},  # Desativa a renderização inline de widgets\n",
+    ")\n",
     "\n",
-    "# Executa a consulta para contar valores nulos\n",
-    "null_counts = df.select(expr_list)\n",
-    "null_counts.show()\n",
-    "\n",
-    "df.show(5)\n",
-    "\n",
+    "profile_report_file =  \"../relatorios/profile_chicago_crime_before.html\"\n",
+    "profile_report.to_file(Path(profile_report_file))\n",
+    "profile_report_file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a7e349d",
+   "metadata": {},
+   "source": [
+    "### Cleanup dos dados\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "756c0d5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# assume raw DataFrame 'raw'\n",
+    "df_clean = (df\n",
+    "    # 1. cast de datas\n",
+    "    .withColumn(\"Date\", F.to_timestamp(\"Date\", \"MM/dd/yyyy HH:mm:ss a\"))\n",
+    "    .withColumn(\"Updated_On\", F.to_timestamp(\"Updated_On\", \"MM/dd/yyyy HH:mm:ss a\"))\n",
+    "    # 2. zeros -> null\n",
+    "    .withColumn(\"Ward\", F.when(F.col(\"Ward\") == 0, None).otherwise(F.col(\"Ward\")).cast(\"int\"))\n",
+    "    .withColumn(\"Community_Area\", F.when(F.col(\"Community_Area\") == 0, None)\n",
+    "                                   .otherwise(F.col(\"Community_Area\")).cast(\"int\"))\n",
+    "    .withColumn(\"X_Coordinate\", F.when(F.col(\"X_Coordinate\") == 0, None)\n",
+    "                                  .otherwise(F.col(\"X_Coordinate\")))\n",
+    "    .withColumn(\"Y_Coordinate\", F.when(F.col(\"Y_Coordinate\") == 0, None)\n",
+    "                                  .otherwise(F.col(\"Y_Coordinate\")))\n",
+    "    # 3. normalização de texto\n",
+    "    .withColumn(\"Block\", F.upper(F.trim(\"Block\")))\n",
+    "    .withColumn(\"Primary_Type\", F.upper(F.trim(\"Primary_Type\")))\n",
+    "    .withColumn(\"Description\", F.upper(F.trim(\"Description\")))\n",
+    "    .withColumn(\"Location_Description\", F.upper(F.trim(\"Location_Description\")))\n",
+    "    # 4. garantir tipos mais seguros\n",
+    "    .withColumn(\"ID\", F.col(\"ID\").cast(T.LongType()))  # evita overflow no futuro\n",
+    "    # 5. sanity-check de bounding box de Chicago\n",
+    "    .filter((F.col(\"Latitude\").isNull()) |\n",
+    "            ((F.col(\"Latitude\") > 41.6) & (F.col(\"Latitude\") < 42.1) &\n",
+    "             (F.col(\"Longitude\") < -87.5) & (F.col(\"Longitude\") > -87.9)))\n",
+    "    # 6. remover duplicados\n",
+    "    .dropDuplicates()\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa63bbb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Amostra de 30%\n",
-    "df_small = df.sample(fraction=0.1, seed=42)\n",
+    "df_clean_small = df_clean.sample(fraction=0.1, seed=42)\n",
     "\n",
     "# Guarda em Parquet\n",
-    "df.coalesce(4).write.mode(\"overwrite\").parquet(\"../dados/chicago_crime.parquet\")\n",
+    "df_clean.coalesce(4).write.mode(\"overwrite\").parquet(\"../dados/chicago_crime.parquet\")\n",
     "\n",
-    "df_small.write.mode(\"overwrite\").parquet(\"../dados/chicago_crime_small.parquet\")\n"
+    "df_clean_small.coalesce(4).write.mode(\"overwrite\").parquet(\"../dados/chicago_crime_small.parquet\")"
    ]
   }
  ],
