Changes on 04 and 05

--- a/notebooks/03_preprocess_feature_engineering.ipynb
+++ b/notebooks/03_preprocess_feature_engineering.ipynb
@@ -25,7 +25,7 @@
       "✅ parquet completo pronto em ../dados/chicago_ready_full.parquet  (2994452 linhas)\n",
       "⏳ Preparar parquet pequeno balanceado …\n",
       "✅ parquet pequeno salvo em ../dados/chicago_ready_small.parquet (150110 linhas)\n",
-      "⌛ Elapsed: 72.5 s\n"
+      "⌛ Elapsed: 91.4 s\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
     "    full_model\n",
     "    .transform(df_small)\n",
     "    .withColumn(\"label\", col(\"Arrest\").cast(\"int\"))\n",
-    "    .select(F.col(\"pcaFeatures\").alias(\"features\"), \"label\")\n",
+    "    .select(F.col(\"pcaFeatures\"), \"label\")\n",
     ")\n",
     "\n",
     "ready_small.write.mode(\"overwrite\").parquet(READY_SMALL)\n",
